--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -227,6 +227,7 @@ body {
     z-index: -1;
     opacity: 0;
     transition: opacity 200ms ease;
+    /* transition: z-index 200ms ease; */
     background-color: rgba(50, 50, 50, 0);
 }
 
@@ -235,6 +236,7 @@ body {
     opacity: 1;
     backdrop-filter: blur(5px);
     transition: opacity 200ms ease;
+    /* transition: z-index 200ms ease; */
 }
 
 .delete-dialog-grid {
