--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -200,7 +200,7 @@ body {
     align-items: center;
 }
 
-.creation-fit-container {
+.page-fit-container {
     margin: 8px;
     height: 500px;
 }
@@ -275,6 +275,59 @@ body {
     height: 100%;
     justify-items: center;
     align-items: self-end;
+}
+
+.hidden-above {
+    position: absolute;
+    top: -100%;
+    right: 0%;
+    transition: top 200ms ease;
+    background-color: rgb(50, 50, 50);
+}
+
+.slide-from-above {
+    transition: top 200ms ease;
+    top: 0%;
+}
+
+.settings-rows {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 100%;
+    grid-template-rows: 5% 25% 10% 10% 10% 40%;
+}
+
+.settings-actions {
+    justify-self: end;
+    align-self: center;
+}
+
+.settings-title {
+    align-self: center;
+    justify-self: center;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+.settings-tile {
+    background-color: rgb(30, 30, 30);
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 90% 10%;
+    grid-template-rows: 100%;
+}
+
+.settings-tile-label {
+    align-self: center;
+    justify-self: start;
+    margin-left: 10px;
+}
+
+.settings-tile-action {
+    align-self: center;
+    justify-self: end;
+    margin-right: 10px;
 }
 
 .tabs-container {
