--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -295,7 +295,7 @@ body {
     width: 100%;
     height: 100%;
     grid-template-columns: 100%;
-    grid-template-rows: 5% 25% 10% 10% 10% 40%;
+    grid-template-rows: 5% 25% 10% 10% 10% 5% 35%;
 }
 
 .settings-actions {
@@ -436,4 +436,41 @@ body {
 .snackbar.fadingOut {
     opacity: 0;
     transition: opacity 500ms;
+}
+
+.selector {
+    background-color: rgb(80,80,80);
+    color: white;
+    border: solid 0px;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.selector:focus {
+    outline: none;
+}
+
+.file-import-container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% 85%;
+    background-color: rgb(30, 30, 30);
+    border-radius: 5px;
+}
+
+.file-import-container .title {
+    margin-left: 10px;
+    align-self: center;
+}
+
+.file-import-container .drop-zone {
+    border: solid 2px white;
+    margin: 10px;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
+    align-items: center;
+    justify-items: center;
 }
