--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,6 +156,14 @@ body {
     min-height: 32px;
 }
 
+.more-tab {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+    align-items: center;
+    justify-items: center;
+}
+
 .button {
     border-radius: 5px;
     cursor: pointer;
