--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,11 @@ body {
     border-radius: 5px;
 }
 
+body.light {
+    background-color: rgb(205, 205, 205);
+    color: black;
+}
+
 #app {
     width: 350px;
     height: 500px;
@@ -11,6 +16,10 @@ body {
 
 .separator {
     border-top: 3px solid rgb(70, 70, 70);
+}
+
+.separator.light {
+    border-top: 3px solid rgb(185, 185, 185);
 }
 
 .page-container {
@@ -34,6 +43,11 @@ body {
     grid-template-rows: 100%;
     justify-items: center;
     align-items: center;
+}
+
+.tools-row.light {
+    display: grid;
+    background-color: rgb(185, 185, 185);
 }
 
 .outer-tabs-container::-webkit-scrollbar {
@@ -65,6 +79,10 @@ body {
     background-color: rgb(50, 50, 50);
 }
 
+.mid-tabs-container.light {
+    background-color: rgb(205, 205, 205);
+}
+
 .tab-groups-container {
     display: grid;
     height: 100%;
@@ -78,7 +96,7 @@ body {
 }
 
 .tabs-row {
-    background-color: rgb(70, 70, 70) ;
+    background-color: rgb(70, 70, 70);
     border-radius: 5px;
     display: grid;
     grid-template-columns: 100%;
@@ -86,13 +104,21 @@ body {
     max-height: 25vh;
 }
 
+.tabs-row.light {
+    background-color: rgb(185, 185, 185);
+}
+
 .tabs-row-top {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    background-color: rgb(40,40,40);
+    background-color: rgb(40, 40, 40);
     display: grid;
     grid-template-columns: 90% 10%;
     grid-template-rows: 100%;
+}
+
+.tabs-row-top.light {
+    background-color: rgb(215, 215, 215);
 }
 
 .row-top-name {
@@ -113,8 +139,16 @@ body {
     background-color:rgb(50, 50, 50);
 }
 
+.row-delete-btn.light {
+    background-color:rgb(205, 205, 205);
+}
+
 .row-delete-btn:hover {
     background-color: rgb(100, 100, 100);
+}
+
+.row-delete-btn:hover.light {
+    background-color: rgb(105, 105, 105);
 }
 
 .tabs-row-top.selected {
@@ -135,9 +169,13 @@ body {
     max-height: 60px;
     max-width: 60px;
     border-radius: 5px;
-    background-color: rgb(40,40,40);
+    background-color: rgb(40, 40, 40);
     padding-bottom: 8px;
     padding-top: 8px;
+}
+
+.tab-list-icon.light {
+    background-color: rgb(215, 215, 215);
 }
 
 .centered-icon-container {
@@ -172,8 +210,16 @@ body {
     background-color:rgb(50, 50, 50);
 }
 
+.button.light {
+    background-color:rgb(205, 205, 205);
+}
+
 .button:hover {
     background-color: rgb(100, 100, 100);
+}
+
+.button:hover.light {
+    background-color: rgb(105, 105, 105);
 }
 
 .button.small {
@@ -193,6 +239,10 @@ body {
     background-color: rgb(50, 50, 50);
 }
 
+.hidden-right.light {
+    background-color: rgb(205, 205, 205);
+}
+
 .slide-from-right {
     transition: right 200ms ease;
     right: 0%;
@@ -208,24 +258,37 @@ body {
     align-items: center;
 }
 
+.creation-top-row.light {
+    background-color: rgb(185, 185, 185);
+}
+
 .page-fit-container {
     margin: 8px;
     height: 500px;
 }
 
 .group-name-input {
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     border: 0px;
-    border-bottom: solid rgb(50,50,50);
+    border-bottom: solid rgb(50, 50, 50);
     color: white;
     padding-top: 10px;
     padding-bottom: 5px;
     font-size: 15px;
 }
 
+.group-name-input.light {
+    border-bottom: solid rgb(105, 105, 105);
+    color: black;
+}
+
 .group-name-input:focus {
     outline: none;
     border-bottom: solid rgb(100,100,100);
+}
+
+.group-name-input:focus.light {
+    border-bottom: solid rgb(105,105,105);
 }
 
 .hidden-behind {
@@ -268,6 +331,10 @@ body {
     grid-template-rows: 50%;
 }
 
+.delete-dialog-base.light {
+    background-color: rgb(225, 225, 225);
+}
+
 .delete-dialog-text {
     align-self: center;
     justify-self: center;
@@ -291,6 +358,10 @@ body {
     right: 0%;
     transition: top 200ms ease;
     background-color: rgb(50, 50, 50);
+}
+
+.hidden-above.light {
+    background-color: rgb(205, 205, 205);
 }
 
 .slide-from-above {
@@ -327,6 +398,10 @@ body {
     grid-template-rows: 100%;
 }
 
+.settings-tile.light {
+    background-color: rgb(225, 225, 225);
+}
+
 .settings-tile-label {
     align-self: center;
     justify-self: start;
@@ -358,6 +433,10 @@ body {
     grid-template-rows: 25% 75%;
 }
 
+.tab-cell.light {
+    background-color: rgb(185, 185, 185);
+}
+
 .tab-cell.small {
     max-height: 100%;
     max-width: 150px;   
@@ -373,6 +452,10 @@ body {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     column-gap: 2px;
+}
+
+.tab-cell-top-row.light {
+    background-color: rgb(215, 215, 215);
 }
 
 .tab-cell-bottom-row {
@@ -412,6 +495,10 @@ body {
     height: 81.5vh;
     justify-items: center;
     align-items: center;
+}
+
+.create-group-options-container.light {
+    background-color: rgb(185, 185, 185);
 }
 
 .button.row-button {
@@ -455,12 +542,16 @@ body {
 }
 
 .selector {
-    background-color: rgb(80,80,80);
+    background-color: rgb(80, 80, 80);
     color: white;
     border: solid 0px;
     border-radius: 5px;
     padding: 5px;
     cursor: pointer;
+}
+
+.selector.light {
+    background-color: rgb(175, 175, 175);
 }
 
 .selector:focus {
@@ -473,6 +564,10 @@ body {
     grid-template-rows: 15% 85%;
     background-color: rgb(30, 30, 30);
     border-radius: 5px;
+}
+
+.file-import-container.light {
+    background-color: rgb(225, 225, 225);
 }
 
 .file-import-container .title {
@@ -492,16 +587,32 @@ body {
     cursor: pointer;
 }
 
+.file-import-container .drop-zone.light {
+    border: solid 2px rgb(175, 175, 175);
+}
+
 .file-import-container .drop-zone:hover {
-    border: solid 2px rgb(250, 250, 255);
+    border: solid 2px rgb(255, 255, 255);
+}
+
+.file-import-container .drop-zone:hover.light {
+    border: solid 2px rgb(0, 0, 0);
 }
 
 .file-import-container .file-icon {
     color: rgb(80, 80, 80);
 }
 
+.file-import-container .file-icon.light {
+    color: rgb(175, 175, 175);
+}
+
 .file-import-container .drop-zone:hover .file-icon {
     color: rgb(255, 255, 255);
+}
+
+.file-import-container .drop-zone:hover .file-icon.light {
+    color: rgb(0, 0, 0);
 }
 
 .import-dialog-grid {
@@ -523,6 +634,10 @@ body {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 50%;
+}
+
+.import-dialog-base.light {
+    background-color: rgb(225, 225, 225);
 }
 
 .import-dialog-text {
